[project]
name = "email-agent-demo"
version = "0.1.0"
description = "A stateful email assistant built as a LangChain Deep Agent, deployable to LangSmith."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.7",
    "langchain>=1.0.1",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.7.31",
    "python-dotenv>=1.2.2",
]

[tool.setuptools]
py-modules = ["agent"]
